Fix dropdown on small screens, scrollbar is back...

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -30,84 +30,6 @@
   }
 }
 
-.site-nav {
-  float: right;
-  line-height: $base-line-height * $base-font-size * 2.25;
-
-  .nav-trigger {
-    display: none;
-  }
-
-  .menu-icon {
-    display: none;
-  }
-
-  .page-link {
-    color: $text-color;
-    line-height: $base-line-height;
-
-    // Gaps between nav items, but not on the last one
-    &:not(:last-child) {
-      margin-right: 20px;
-    }
-  }
-
-  @include media-query($on-palm) {
-    position: absolute;
-    top: 9px;
-    right: 0;
-    background-color: #171A2F;
-    // border: 1px solid $grey-color-light;
-    // border-radius: 5px;
-    text-align: right;
-
-    label[for="nav-trigger"] {
-      display: block;
-      float: right;
-      width: 36px;
-      height: 36px;
-      z-index: 2;
-      cursor: pointer;
-    }
-
-    .menu-icon {
-      display: block;
-      float: right;
-      width: 36px;
-      height: 26px;
-      line-height: 0;
-      padding-top: 10px;
-      text-align: center;
-
-      > svg path {
-        fill: $grey-color-dark;
-      }
-    }
-
-    input ~ .trigger {
-      clear: both;
-      display: none;
-    }
-
-    input:checked ~ .trigger {
-      display: block;
-      padding-bottom: 5px;
-    }
-
-    .page-link {
-      display: block;
-      padding: 5px 10px;
-
-      &:not(:last-child) {
-        margin-right: 0;
-      }
-      margin-left: 20px;
-    }
-  }
-}
-
-
-
 /**
  * Site footer
  */
@@ -287,28 +209,100 @@
   }
 }
 
+
+
 .site-sidebar {
-  z-index: 1000;
+  z-index: 200;
   height: 100%;
   width: 300px;
   position: fixed;
   background-color: #171A2F;
   overflow-x: hidden;
-  overflow-y: hidden;
+  overflow-y: scroll;
 
   @include media-query($on-palm) {
-    height: 50px;
-    width: 100%;
     position: absolute;
     top: 0;
+    width: 100%;
+    height: auto;
+    line-height: $base-line-height * $base-font-size * 0.6;
+
+    input:checked {
+      height: auto;
+      max-height: none;
+    }
   }
 
-  .no-scroll-bar {
-    width: 320px;
-    padding-right: 20px;
-    overflow-x: hidden;
-    overflow-y: scroll;
+  .site-nav {
+    background-color: #171A2F;
+
+    width: 100%;
     height: 100%;
+
+    .nav-trigger {
+      display: none;
+    }
+
+    .menu-icon {
+      display: none;
+    }
+
+    .page-link {
+      color: $text-color;
+      line-height: $base-line-height;
+
+      // Gaps between nav items, but not on the last one
+      &:not(:last-child) {
+        margin-right: 20px;
+      }
+    }
+
+    @include media-query($on-palm) {
+      background-color: #171A2F;
+
+      label[for="nav-trigger"] {
+        position: absolute;
+        top: 9px;
+        right: 0;
+        width: 36px;
+        height: 36px;
+        cursor: pointer;
+      }
+
+      .menu-icon {
+        display: block;
+        float: right;
+        width: 36px;
+        height: 26px;
+        line-height: 0;
+        padding-top: 10px;
+        text-align: center;
+
+        > svg path {
+          fill: $grey-color-dark;
+        }
+      }
+
+      input ~ .trigger {
+        clear: both;
+        display: none;
+      }
+
+      input:checked ~ .trigger {
+        display: block;
+        padding-bottom: 5px;
+      }
+
+      .page-link {
+        display: block;
+        padding: 5px 10px;
+
+        &:not(:last-child) {
+          margin-right: 0;
+        }
+        margin-left: 20px;
+      }
+    }
   }
 
   .sidebar-title {
@@ -330,6 +324,7 @@
   }
 
   .sidebar-list {
+    z-index: 300px;
     margin-top: 20px;
     list-style: none;
     margin-left: 0;
